 - Experimental support for 2nd-order optimization with KFAC.
   Currently supports fully-connected, convolution, and GRU layers.
 - Added Sub-graph parallelism support for multi-branch architectures
   (split, slice, sum, and concat layers)
 - Data + sub-graph parallelism for in-core models (D&SP and D&SP-cSub)
 - Initial sub-graph parallelism support for common layers in
   Transformers

Support for new network structures:

Support for new layers:
- Added support for 2D Matrices for Scatter and Gather layers
- Added distributed tensor parallelism with channelwise decomposition for channelwise fully connected layer

Python front-end:

Performance optimizations:
 - Enabled the input layers to use a view of the I/O buffers in the
 buffered data coordinator

Model portability & usability:

Experiments & Applications:
 - Example for training Transformer model with D&SP and D&SP-cSub

Internal features:
 - Added operator class

I/O & data readers:
 - Updated SMILES data reader to use sample lists
 - Added explicitly managed buffered reading and local unpacking for the
   SMILES data reader to minimize file access
 - Sample lists with integral indices can use range format (start ... end)
 - Added a new extensible HDF5 data reader that uses a data set schema
 and experiment schema files to define how the data is represented.
 This allows the user to change the representation of data without
 changing the data reader.

Build system:

Bug fixes:

Retired features:

============================== Release Notes: v0.102 ==============================
Support for new training algorithms:
 - LTFB is now a first-class training algorithm.
 - LTFB now allows multiple metrics. The local algorithm is favored by
   each trainer and a partner model must win every metric to be declared
   the tournament winner.
 - The batched iterative optimizer (sgd_training_algorithm) was
   refactored for consistency.
 - Improved documentation of training algorithm infrastructure.
